XWIKI-23135: The right panel appears empty even though it is disabled * Fixed the uneven margins on the side of panels to be like what it used to be.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/layout.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/layout.less
@@ -36,11 +36,13 @@
   & #leftPanels {
     order: 1;
     width: ~"var(--panel-column-left-width)";
+    margin-left: ~"calc(-1 * var(--grid-gutter-width) / 2)";
   }
 
   & #rightPanels, & #editPanels {
     order: 3;
     width: ~"var(--panel-column-right-width)";
+    margin-right: ~"calc(-1 * var(--grid-gutter-width) / 2)";
   }
   
   /* Depending on the admin parameters, we want to change the default size. */
